discussion/kv_engine/156529/156529_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Test clang-tidy

Change-Id: If42bca909b0e7207213dbefd76fa09def27ab931

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-06-28 08:24:34.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-28 08:58:42.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10275/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include <spdlog/logger.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10275/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10275/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12324/ : FAILURE

Failure of GoogleTest "TransportProtocols/SaslTest.SinglePLAIN/McbpSsl":

<pre>
[ RUN      ] TransportProtocols/SaslTest.SinglePLAIN/McbpSsl
[2021-06-28T08:45:12.127Z] Failed building socket: connect() failed (127.0.0.1 46113): Connection refused
[2021-06-28T08:45:12.127Z] unknown file: Failure
[2021-06-28T08:45:12.127Z] C++ exception with description "Failed to connect to: localhost:46113: Connection refused" thrown in SetUp().
[2021-06-28T08:45:12.127Z] Failed building socket: connect() failed (127.0.0.1 46113): Connection refused
[2021-06-28T08:45:12.127Z] unknown file: Failure
[2021-06-28T08:45:12.127Z] C++ exception with description "Failed to connect to: localhost:46113: Connection refused" thrown in TearDown().
[2021-06-28T08:45:12.127Z] [  FAILED  ] TransportProtocols/SaslTest.SinglePLAIN/McbpSsl, where GetParam() = McbpSsl (1 ms)
TransportProtocols/SaslTest.SinglePLAIN/McbpSsl
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12324/ )

ThreadSanitizer issue: data race on vptr (ctor/dtor vs virtual call) ../kv_engine/include/memcached/tracer.h:132 in cb::tracing::Traceable::~Traceable()  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12324/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37372/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31875/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8877/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10926/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11995/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11845/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19888/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
